Add code style checks Add build and ccm tests to CI