@@ -99,7 +99,6 @@ if [ $JAVA_VERSION -ge 11 ] ; then
     if [ "$?" = "1" ] ; then # [X] to prevent ccm from replacing this line
         # only add -Xlog:gc if it's not mentioned in jvm-server.options file
         mkdir -p ${CASSANDRA_LOG_DIR}
-JVM_OPTS="$JVM_OPTS -Xlog:gc=info,heap=trace,age=debug,safepoint=info,promotion=trace:file=/Users/adejanovski/.ccm/repair_qa/node1/logs/gc.log:time,uptime,pid,tid,level:filecount=10,filesize=10240"
     fi
 else
     # Java 8
@@ -107,7 +106,6 @@ else
     if [ "$?" = "1" ] ; then # [X] to prevent ccm from replacing this line
         # only add -Xlog:gc if it's not mentioned in jvm-server.options file
         mkdir -p ${CASSANDRA_LOG_DIR}
-JVM_OPTS="$JVM_OPTS -Xloggc:/Users/adejanovski/.ccm/repair_qa/node1/logs/gc.log"
     fi
 fi
 
